--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
 
     <section class="products" id="products">
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200" alt="Product 1">
+            <img src="https://download.logo.wine/logo/Amazon_Prime/Amazon_Prime-Logo.wine.png" alt="Product 1">
             <div class="product-info">
-                <h3>Product 1</h3>
-                <p>High-quality product with amazing features.</p>
-                <a href="#">Buy Now</a>
+                <h3>Amazon prime</h3>
+                <p>try Amazon prime for free.</p>
+                <a href="https://www.amazon.co.uk/tryprimefree?tag=r1david1cosmi">Buy Now</a>
             </div>
         </div>
         <div class="product-card">
