--- a/index.html
+++ b/index.html
@@ -143,25 +143,25 @@
         <div class="product-card">
             <img src="https://download.logo.wine/logo/Amazon_Prime/Amazon_Prime-Logo.wine.png" alt="Product 1">
             <div class="product-info">
-                <h3>Amazon prime</h3>
+                <h3>Amazon Prime</h3>
                 <p>try Amazon prime for free.</p>
-                <a href="https://www.amazon.co.uk/tryprimefree?tag=r1david1cosmi">Buy Now</a>
+                <a href="https://www.amazon.co.uk/tryprimefree?tag=r1david1cosmi-21">Buy Now</a>
             </div>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200" alt="Product 2">
+            <img src="https://download.logo.wine/logo/Prime_Video/Prime_Video-Logo.wine.png" alt="Product 2">
             <div class="product-info">
-                <h3>Product 2</h3>
-                <p>Best in class product for your needs.</p>
-                <a href="#">Buy Now</a>
+                <h3>Amazon Prime Video</h3>
+                <p>Watch Amazon prime videos for a low price!</p>
+                <a href="https://www.amazon.co.uk/gp/video/primesignup/?tag=r1david1cosmi-21">Buy Now</a>
             </div>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200" alt="Product 3">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRs9aO54cZ7lrjZmsN1u1taODbeOENXIDmUyA&s" alt="Product 3">
             <div class="product-info">
-                <h3>Product 3</h3>
-                <p>Top-rated product by customers.</p>
-                <a href="#">Buy Now</a>
+                <h3>Amazon Music Unlimited</h3>
+                <p>Amzon music at low price for everyone!</p>
+                <a href="https://www.amazon.co.uk/music/unlimited?tag=r1david1cosmi-21">Buy Now</a>
             </div>
         </div>
     </section>
