--- a/index.html
+++ b/index.html
@@ -164,6 +164,14 @@
                 <a href="https://www.amazon.co.uk/music/unlimited?tag=r1david1cosmi-21">Buy Now</a>
             </div>
         </div>
+          <div class="product-card">
+            <img src="https://m.media-amazon.com/images/I/81abbFymJ3L._AC_UF894,1000_QL80_FMwebp_.jpg" alt="Product 3">
+            <div class="product-info">
+                <h3>EA Sports FC 25 standard edition PS5</h3>
+                <p>play FC 25 on your ps5!</p>
+                <a href="https://aman.to/4g26SIz">Buy Now</a>
+            </div>
+        </div>
     </section>
 
     <footer>
