--- a/index.html
+++ b/index.html
@@ -169,13 +169,21 @@
             <div class="product-info">
                 <h3>EA Sports FC 25 standard edition PS5</h3>
                 <p>play FC 25 on your ps5!</p>
-                <a href="https://aman.to/4g26SIz">Buy Now</a>
+                <a href="https://amzn.to/4g26SIz">Buy Now</a>
+            </div>
+        </div>
+        <div class="product-card">
+            <img src="https://m.media-amazon.com/images/I/71HjG1HQwwL._AC_UF1000,1000_QL80_FMwebp_.jpg" alt="Product 3">
+            <div class="product-info">
+                <h3>Philips blender</h3>
+                <p>Philips blender 3000 series, ProBlend system!</p>
+                <a href="https://amzn.to/4cGlU3y">Buy Now</a>
             </div>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2024 Your Affiliate Business. All rights reserved.</p>
+        <p>&copy; 2024 affiliate community. website copyrights, design.</p>
     </footer>
 
 </body>
